--- a/Stanford-CS106B/Section1Solution/Section1Solution/Section1Solution.vcproj
+++ b/Stanford-CS106B/Section1Solution/Section1Solution/Section1Solution.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="SectionHandout1"
-	ProjectGUID="{1BE6D46E-BD64-4D69-9196-B45C7631EA07}"
-	RootNamespace="SectionHandout1"
+	Name="Section1Solution"
+	ProjectGUID="{F5076C73-16BD-4545-B46D-581CA401CEAB}"
+	RootNamespace="Section1Solution"
 	>
 	<Platforms>
 		<Platform
@@ -159,23 +159,7 @@
 			>
 		</Filter>
 		<File
-			RelativePath=".\alphabet.txt"
-			>
-		</File>
-		<File
-			RelativePath=".\grades.txt"
-			>
-		</File>
-		<File
-			RelativePath=".\main.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\resource.h"
-			>
-		</File>
-		<File
-			RelativePath=".\SectionHandout1.rc"
+			RelativePath=".\sol.cpp"
 			>
 		</File>
 	</Files>
