--- a/Stanford-CS106B/Assignment 2/Assignment 2/Assignment 2.vcproj
+++ b/Stanford-CS106B/Assignment 2/Assignment 2/Assignment 2.vcproj
@@ -171,6 +171,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\Mazify.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Mazify.h"
+			>
+		</File>
+		<File
 			RelativePath=".\RandomWriting.cpp"
 			>
 		</File>
