--- a/Udacity CS253/helloworld/app.yaml
+++ b/Udacity CS253/helloworld/app.yaml
@@ -1,8 +1,9 @@
-application: hellodsbmac
+application: helloworld
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: true
 
 handlers:
 - url: /.*
-  script: validation.py
+  script: rot13.app
